// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<div
  data-css-1so76ss=""
>
  <p
    style={
      Object {
        "color": "white",
      }
    }
  >
    <a
      data-css-1ud2sxh=""
      href="http://duckduckgo.com"
    >
      Click me
    </a>
  </p>
</div>
`;

exports[`Storyshots appearance subtle 1`] = `
<div
  data-css-1so76ss=""
>
  <p
    style={
      Object {
        "color": "white",
      }
    }
  >
    <a
      data-css-di03rb=""
      href="http://duckduckgo.com"
    >
      Click me
    </a>
  </p>
</div>
`;

exports[`Storyshots tagNames button 1`] = `
<div
  data-css-1so76ss=""
>
  <p
    style={
      Object {
        "color": "white",
      }
    }
  >
    <button
      data-css-1ud2sxh=""
    >
      Click me
    </button>
  </p>
</div>
`;
